@@ -4,6 +4,7 @@
 #include "common.h"
 #include "ralloc.h"
 #include "gen.h"
+#include "peep.h"
 #include "support.h"
 
 typedef enum
